--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,10 +2,10 @@ aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
 aiosqlite==0.20.0
-anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1732732445543/work
+anaconda-anon-usage==0.5.0
 annotated-types==0.7.0
 anyio==4.7.0
-archspec @ file:///croot/archspec_1709217642129/work
+archspec==0.2.3
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -16,29 +16,29 @@ babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
 blinker==1.9.0
-boltons @ file:///work/perseverance-python-buildout/croot/boltons_1698851177130/work
-Brotli @ file:///croot/brotli-split_1714483155106/work
+boltons==23.0.0
+Brotli==1.0.9
 bs4==0.0.2
 cachetools==5.5.1
-certifi @ file:///croot/certifi_1734473278428/work/certifi
+certifi==2024.12.14
 cffi==1.17.1
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+charset-normalizer==3.3.2
 click==8.1.8
 comm==0.2.2
-conda @ file:///croot/conda_1734648259968/work
-conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1733258728466/work
-conda-content-trust @ file:///croot/conda-content-trust_1714483159009/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1731366181659/work
+conda==24.11.2
+conda-anaconda-telemetry==0.1.1
+conda-content-trust==0.2.0
+conda-libmamba-solver==24.9.0
+conda-package-handling==2.4.0
+conda_package_streaming==0.11.0
 contourpy==1.3.1
-cryptography @ file:///croot/cryptography_1732129644106/work
+cryptography==43.0.3
 cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.7
 decorator==5.1.1
 defusedxml==0.7.1
-distro @ file:///croot/distro_1714488253808/work
+distro==1.9.0
 dydantic==0.0.8
 et_xmlfile==2.0.0
 executing==2.1.0
@@ -48,7 +48,7 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 fonttools==4.56.0
 fqdn==1.5.1
-frozendict @ file:///croot/frozendict_1713194832637/work
+frozendict==2.4.2
 frozenlist==1.5.0
 fsspec==2024.6.1
 greenlet==3.1.1
@@ -57,7 +57,7 @@ httpcore==1.0.7
 httpx==0.28.1
 httpx-sse==0.4.0
 humanize==4.11.0
-idna @ file:///croot/idna_1714398848350/work
+idna==3.7
 ipykernel==6.29.5
 ipython==8.28.0
 ipyvue==1.11.2
@@ -70,14 +70,14 @@ Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
 json5==0.10.0
-jsonpatch @ file:///croot/jsonpatch_1714483231291/work
+jsonpatch==1.33
 jsonpointer==2.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter-events==0.11.0
-jupyter-lsp==2.2.5
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+jupyter-events==0.11.0
+jupyter-lsp==2.2.5
 jupyter_server==2.15.0
 jupyter_server_terminals==0.5.3
 jupyterlab==4.3.4
@@ -97,7 +97,7 @@ langgraph-checkpoint-sqlite==2.0.5
 langgraph-cli==0.1.71
 langgraph-sdk==0.1.51
 langsmith==0.3.8
-libmambapy @ file:///croot/mamba-split_1732896306512/work/libmambapy
+libmambapy==1.5.11
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -105,7 +105,7 @@ marshmallow==3.26.1
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-menuinst @ file:///croot/menuinst_1731364904452/work
+menuinst==2.2.0
 Mesa==3.1.3
 mistune==3.0.2
 mpmath==1.3.0
@@ -143,8 +143,9 @@ pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
+pip==24.2
 platformdirs==4.3.6
-pluggy @ file:///croot/pluggy_1733169602837/work
+pluggy==1.5.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.48
 propcache==0.2.1
@@ -152,16 +153,16 @@ psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pybind11==2.13.6
-pycosat @ file:///croot/pycosat_1714510623388/work
+pycosat==0.6.6
 pycparser==2.22
 pydantic==2.10.6
-pydantic-settings==2.7.1
 pydantic_core==2.27.2
+pydantic-settings==2.7.1
 Pygments==2.18.0
 pykeops==2.2.3
 pymdown-extensions==10.14.3
 pyparsing==3.2.1
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
@@ -172,15 +173,15 @@ pyzmq==26.2.0
 reacton==1.9.0
 referencing==0.35.1
 regex==2024.11.6
-requests @ file:///croot/requests_1730999120400/work
+requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.9.4
 rich-click==1.8.5
 rpds-py==0.22.3
-ruamel.yaml @ file:///croot/ruamel.yaml_1727980156079/work
-ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1727769819935/work
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
 scikit-learn==1.5.2
 scipy==1.15.1
 seaborn==0.13.2
@@ -209,19 +210,19 @@ torch==2.6.0+cu118
 torchaudio==2.6.0+cu118
 torchvision==0.21.0+cu118
 tornado==6.4.1
-tqdm @ file:///croot/tqdm_1724853939799/work
+tqdm==4.66.5
 traitlets==5.14.3
 trio==0.28.0
 trio-websocket==0.11.1
 triton==3.2.0
 trustcall==0.0.37
-truststore @ file:///work/perseverance-python-buildout/croot/truststore_1701735771625/work
+truststore==0.8.0
 types-python-dateutil==2.9.0.20241206
-typing-inspect==0.9.0
 typing_extensions==4.12.2
+typing-inspect==0.9.0
 tzdata==2025.1
 uri-template==1.3.0
-urllib3 @ file:///croot/urllib3_1727769808118/work
+urllib3==2.2.3
 uvicorn==0.34.0
 watchdog==6.0.0
 watchfiles==1.0.4
@@ -237,4 +238,4 @@ widgetsnbextension==4.0.13
 wikipedia==1.4.0
 wsproto==1.2.0
 yarl==1.18.3
-zstandard @ file:///croot/zstandard_1731356346222/work
+zstandard==0.23.0
