--- a/ui/package.json
+++ b/ui/package.json
@@ -13,8 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-cal": "^4.10.2",
     "vue-router": "^4.5.0"
