--- a/ui/package.json
+++ b/ui/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.0",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "pinia": "^3.0.1",
+    "primevue": "^4.3.1",
     "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-cal": "^4.10.2",
