--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@primeuix/themes": "^1.0.0",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
+    "esbuild": "^0.25.0",
     "pinia": "^3.0.1",
     "primevue": "^4.3.1",
     "tailwindcss": "^4.0.8",
