--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.0.0",
     "@tailwindcss/vite": "^4.0.8",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "esbuild": "^0.25.0",
     "pinia": "^3.0.1",
